--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <li class="glide__slide">
               <div class="center">
                 <div class="left">
-                  <span class="">Flavors & Adornments</span>
-                  <h1 class="">Culinary Heritage</h1>
-                  <p>Shop Unique Crafts & Culinary Delights</p>
-                  <a href="#" class="hero-btn">SHOP NOW</a>
+                  <span class="">Authentic African Ingredients</span>
+                  <h1 class="">Spicy African Flavors</h1>
+                  <p>Explore a World of Flavors: Discover Authentic Delights</p>
+                  <a href="food.html" class="hero-btn">SHOP NOW</a>
                 </div>
                 <div class="right">
                     <img class="img1" src="./images/hero-1.png" alt="">
@@ -118,10 +118,10 @@
             <li class="glide__slide">
               <div class="center">
                 <div class="left">
-                  <span>New Inspiration 2020</span>
+                  <span>Authentic African Crafts</span>
                   <h1>THE PERFECT MATCH!</h1>
-                  <p>Trending from men's and women's  style collection</p>
-                  <a href="#" class="hero-btn">SHOP NOW</a>
+                  <p>Immerse Yourself in Culture: Explore a World of Art</p>
+                  <a href="art.html" class="hero-btn">SHOP NOW</a>
                 </div>
                 <div class="right">
                   <img class="img2" src="./images/hero-2.png" alt="">
@@ -250,10 +250,10 @@
 
     <section class="section banner">
 <div class="left">
-  <span class="trend">Trend Design</span>
-  <h1>New Collection 2021</h1>
-  <p>New Arrival <span class="color">Sale 50% OFF</span> Limited Time Offer</p>
-  <a href="#" class="btn btn-1">Discover Now</a>
+  <span class="trend">Food and Art Collections</span>
+  <h1>Item Varieties</h1>
+  <p>New Orders <span class="color">Discount Available</span> Limited Time Offer</p>
+  <a href="#" class="btn btn-1">Shop Now</a>
 </div>
 <div class="right">
   <img src="./images/banner.png" alt="">
@@ -267,8 +267,8 @@
   
     <section class="section new-arrival">
       <div class="title" id="art">
-        <h1>Featured</h1>
-        <p>All the latest picked from designer of our store</p>
+        <h1>ARTS</h1>
+        <p>All the latest art collections from our store</p>
       </div>
 
       <div class="product-center">
@@ -353,7 +353,7 @@
           <h2>EXCELLENT SUPPORT</h2>
           <p>We love our customers and they can reach us any time
           of day we will be at your service 24/7</p>
-          <a href="" class="btn btn-1">Contact</a>
+          <a href="" class="btn btn-1">Contact: 081*****</a>
         </div>
         <div class="col">
           <form action="">
